# projetoIA01.2025

./: README.md  testes.ipynb
projeto-ia/: app.py  estacionamento.csv  pyproject.toml  testes.ipynb
